[package]
name = "dot_ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
dot_db = { path = "../dot_db" }
dot_sec = { path = "../dot_sec" }
dot_dsl = { path = "../dot_dsl" }
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt", "sync", "time"] }

[dev-dependencies]
tempfile = "3.10"
