[package]
name = "dot_vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dot_ops = { path = "../dot_ops" }
dot_sec = { path = "../dot_sec" }

[dev-dependencies]
tokio = { version = "1.48", features = ["rt", "time"] }
